k8s/cluster2/base/commander/tunnel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tunnel-server
  labels:
    app.kubernetes.io/name: tunnel-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tunnel-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tunnel-server
    spec:
      volumes:
        - name: tunnel-conf
          configMap:
            name: tunnel-server-conf
            items:
              - key: start.sh
                path: start.sh
        - name: ssh
          secret:
            secretName: ssh
            optional: false
            defaultMode: 0700
      containers:
        - name: tunnel-server-gateway
          image: registry.minikube/command
          imagePullPolicy: Never
          volumeMounts:
            - name: tunnel-conf
              readOnly: true
              mountPath: /tmp/conf
            - name: ssh
              readOnly: true
              mountPath: "/tmp/ssh"
