k8s/cluster2/base/commander/jupyter-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-server
  labels:
    app.kubernetes.io/name: jupyter-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyter-server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyter-server
    spec:
      serviceAccountName: admin-service-account
      volumes:
        - name: data-lab-volume
          persistentVolumeClaim:
            claimName: lab-claim
      containers:
        - name: jupyter-server
          image: registry.minikube/spark-jupyter-3.4:master
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
            - name: data-lab-volume
              mountPath: /Volumes/data/git
---
kind: Service
apiVersion: v1
metadata:
  name: jupyter-server
spec:
  ports:
    - name: jupyter
      port: 8888
  selector:
    app.kubernetes.io/name: jupyter-server
---
kind: Service
apiVersion: v1
metadata:
  name: jupyter-driver
spec:
  ports:
    - name: spark-driver
      port: 24913
  clusterIP: None
  selector:
    app.kubernetes.io/name: jupyter-server
