k8s/cluster2/base/commander/jupyter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-commander-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: jupyter-commander.worldl.xpt
      http:
        paths:
          - path: /jupyter
            pathType: Prefix
            backend:
              service:
                name: jupyter-server
                port:
                  number: 8888
